# learning_ros

./: README.md
Part_1/: why-no-action-servers
Part_1/creating_a_ros_library/: CMakeLists.txt  package.xml
Part_1/creating_a_ros_library/include/creating_a_ros_library/: example_ros_class.hpp
Part_1/creating_a_ros_library/src/: example_ros_class.cpp  example_ros_class_test_main.cpp
Part_1/custom_msgs/: CMakeLists.txt  README.md  package.xml
Part_1/example_action_server/src/: example_action_client.cpp  example_action_server.cpp  example_action_server_w_fdbk.cpp  timer_client.cpp
Part_1/example_parameter_server/: CMakeLists.txt  README.md  package.xml
Part_1/example_parameter_server/launch/: launch_example_param_server.py
Part_1/example_parameter_server/src/: paramsrv.cpp  read_param_from_node.cpp
Part_1/example_ros_class/: CMakeLists.txt  README.md  package.xml
Part_1/example_ros_class/src/: example_ros_class.cpp  example_ros_class.h  example_ros_class.hpp
Part_1/example_ros_msg/: CMakeLists.txt  README.md  package.xml
Part_1/example_ros_msg/msg/: ExampleMessage.msg
Part_1/example_ros_msg/src/: example_ros_message_publisher.cpp  vector_publisher.cpp  vector_subscriber.cpp
Part_1/example_ros_service/: CMakeLists.txt  README.md  package.xml
Part_1/example_ros_service/src/: example_ros_client.cpp  example_ros_service.cpp  path_client.cpp  path_service.cpp  path_service2.cpp
Part_1/minimal_nodes/: CMakeLists.txt  README.md  package.xml
Part_1/minimal_nodes/src/: minimal_controller.cpp  minimal_publisher.cpp  minimal_simulator.cpp  minimal_subscriber.cpp  minimal_subscriber_lambda.cpp  sleepy_minimal_publisher.cpp
Part_1/minimal_nodes_py/: README.md  package.xml  setup.py
Part_1/using_a_ros_library/: CMakeLists.txt  README.md  package.xml
Part_1/using_a_ros_library/src/: example_ros_class_test_main.cpp
Part_2/: what-unported
Part_2/example_eigen/: CMakeLists.txt  README.md  package.xml
Part_2/example_eigen/src/: example_eigen_plane_fit.cpp
Part_2/example_gazebo_set_state/: README.md
Part_2/example_gazebo_set_state/src/: example_gazebo_set_prism_state.cpp  reset_block_state.cpp  set_block_state.cpp
Part_2/example_interactive_marker/: README.md
Part_2/example_interactive_marker/src/: IM_6dof.cpp  IM_6dof_svc_client_test.cpp
Part_2/example_rviz_marker/: CMakeLists.txt  README.md  package.xml
Part_2/example_rviz_marker/src/: example_rviz_marker.cpp  example_rviz_marker_srv.cpp  triad_display.cpp  triad_display_test_node.cpp
Part_2/example_tf_listener/: CMakeLists.txt  README.md  package.xml
Part_2/example_tf_listener/src/: example_tf_listener.cpp  example_tf_listener.hpp  example_tf_listener_fncs.cpp
Part_2/lidar_alarm/: CMakeLists.txt  README.md  package.xml
Part_2/lidar_alarm/src/: lidar_alarm.cpp
Part_2/minimal_joint_controller/: README.md
Part_2/minimal_joint_controller/src/: minimal_joint_controller.cpp
Part_2/minimal_robot_description/: README.md
Part_2/mobot_urdf/: README.md
Part_2/sine_commander/: CMakeLists.txt  package.xml
Part_2/sine_commander/src/: sine_commander.cpp  test_sine_commander.cpp
Part_2/stdr_control/: CMakeLists.txt  README.md  package.xml
Part_2/stdr_control/src/: reactive_commander.cpp  stdr_open_loop_commander.cpp
Part_2/xform_utils/: CMakeLists.txt  README.md  package.xml
Part_2/xform_utils/include/xform_utils/: xform_utils.hpp
Part_2/xform_utils/src/: example_xform_utils.cpp  xform_utils.cpp
Part_3/: what-unported
Part_3/example_camera_calibration/src/: cameras_timesync.cpp  move_calibration_checkerboard.cpp
Part_3/example_opencv/: README.md
Part_3/example_opencv/src/: find_features.cpp  find_red_pixels.cpp  hough_lines.cpp
Part_3/lidar_wobbler/: README.md
Part_3/lidar_wobbler/src/: assemble_scans_test_client.cpp  lidar_transformer.cpp  lidar_wobbler.cpp  wobbler_sine_commander.cpp
Part_3/object_finder/: README.md
Part_3/object_finder/src/: example_object_finder_action_client.cpp  object_finder_as.cpp
Part_3/opencv_and_pcl/src/: pt_cloud_to_image.cpp
Part_3/pcl_utils/: README.md
Part_3/pcl_utils/src/: box_filter_main.cpp  compute_selected_points_centroid.cpp  demo_pcl1.cpp  demo_pcl2.cpp  display_ellipse.cpp  (+14 more)
Part_3/simple_camera_model/: README.md
Part_4/: what-unported
Part_4/example_move_base_client/: README.md
Part_4/example_nav_plugin/: README.md
Part_4/lin_steering/: CMakeLists.txt  README.md
Part_4/lin_steering/src/: lin_steering_wrt_amcl.cpp  lin_steering_wrt_odom.cpp  steering_algorithm.hpp
Part_4/localization_w_gps/: CMakeLists.txt  README.md  package.xml
Part_4/localization_w_gps/src/: localization_w_gps.cpp
Part_4/mobot_drifty_odom/: CMakeLists.txt  README.md  package.xml
Part_4/mobot_drifty_odom/src/: mobot_drifty_odom.cpp
Part_4/mobot_nav_config/: README.md
Part_4/mobot_nl_steering/: CMakeLists.txt  README.md  package.xml
Part_4/mobot_nl_steering/src/: mobot_nl_steering.cpp  mobot_nl_steering.hpp
Part_4/mobot_pub_des_state/: CMakeLists.txt  README.md  package.xml
Part_4/mobot_pub_des_state/src/: open_loop_controller.cpp  pub_des_state.cpp  pub_des_state.hpp  pub_des_state_main.cpp  pub_des_state_path_client.cpp  pub_des_state_path_client_3mx3m_sqr.cpp  pub_des_state_startup_main.cpp  starting_pen_pub_des_state_path_client.cpp
Part_4/mobot_with_plugin/: README.md
Part_4/odom_tf/: CMakeLists.txt  README.md  mobot_w_odom_tf.launch  package.xml  spawn-ros2
Part_4/test_plugin/: README.md
Part_4/traj_builder/: CMakeLists.txt  README.md  package.xml
Part_5/: what-unported
Part_5/arm7dof/: README.md
Part_5/baxter/: README.md
Part_5/cartesian_planner/: README.md
Part_5/cwru_ariac/: README.md
Part_5/example_controllers/: CMakeLists.txt  README.md  package.xml
Part_5/generic_gripper_services/: CMakeLists.txt  README.md  package.xml
Part_5/joint_space_planner/: CMakeLists.txt  README.md  package.xml
Part_5/object_manipulation_msgs/: CMakeLists.txt  package.xml
Part_5/object_manipulation_properties/: CMakeLists.txt  README.md  package.xml
Part_5/pt5_models/: README.md
Part_6/: what-unported
(+171 files in other folders)
