<?xml version="1.0"?>
<package format="2">
  <name>using_a_ros_library</name>
  <version>1.0.0</version>
  <description>The using_a_ros_library package</description>
  <maintainer email="wsn@case.edu">wyatt</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>creating_a_ros_library</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>creating_a_ros_library</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
