<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>example_rviz_marker</name>
  <version>0.0.0</version>
  <description>The example_rviz_marker package</description>
  <maintainer email="wsn@case.edu">Wyatt Newman</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>rmw_implementation</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>